langs/mantra-lang-tracing/src/collect/rust/snapshots/mantra_lang_tracing__collect__rust__tests__simple_cfg_attrb.snap
---
source: langs/mantra-lang-tracing/src/collect/rust/tests.rs
info: "\n        #[cfg_attr(feature = \"some-feature\", req_link(\"ID1\"))]\n        fn foo() {}\n        "
---
Annotations(
  traces: [
    Trace(
      ids: [
        RequirementPk(
          id: "ID1",
          product_id: None,
        ),
      ],
      line: 2,
      related_code: Some(3),
      kind: links,
      properties: Some({
        "cfg_attr": [
          "feature=\"some-feature\"",
        ],
      }),
    ),
  ],
  elements: [
    Element(
      ident: None,
      name: "foo",
      definition_line: 3,
      span: LineSpan(
        start: 2,
        end: 3,
      ),
      kind: function,
      content_hash: Some("f2cd916eef4aebb7750755e078e49d1959da8175666027e0ecf54cbcf104fac3"),
    ),
  ],
  coverage_excludes: [],
)
