langs/mantra-lang-tracing/src/collect/rust/snapshots/mantra_lang_tracing__collect__rust__tests__simple_fn_like.snap
---
source: langs/mantra-lang-tracing/src/collect/rust/tests.rs
info: "\n        fn foo() {\n            satisfy_req!(\"ID1\" => {\n                // some code...\n            })\n        }\n        "
---
Annotations(
  traces: [
    Trace(
      ids: [
        RequirementPk(
          id: "ID1",
          product_id: None,
        ),
      ],
      line: 3,
      related_code: Some(CodeBlock(
        kind: other,
        span: LineSpan(
          start: 3,
          end: 5,
        ),
        content_hash: Some("f95d68475113a6e66f55821b9bc4349232deeb19ea671681a3e3ce213c5302c0"),
      )),
      kind: satisfies,
      properties: None,
    ),
  ],
  elements: [
    Element(
      ident: None,
      name: "foo",
      definition_line: 2,
      span: LineSpan(
        start: 2,
        end: 6,
      ),
      kind: function,
      content_hash: Some("e9a3396a3dc6370f8b482eeaba7058d43aa9f8fb8892a86964b6d03acbee3132"),
    ),
  ],
  coverage_excludes: [],
)
